added voter count editing in dashboard

--- a/views/admin/results.ejs
+++ b/views/admin/results.ejs
@@ -6,9 +6,9 @@
 
     <title>BulSU Voting System</title>
 
-    <link rel="stylesheet" type="text/css" href="css/index_admin.css" />
-    <link rel="stylesheet" type="text/css" href="css/results.css" />
-    <link rel="stylesheet" type="text/css" href="css/results_scc.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/index_admin.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/results.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/results_scc.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
   </head>
 
@@ -36,8 +36,9 @@
         </div>
         <nav class="aside-nav">
           <ul class="nav-main">
+            <li><a href="dashboard">Dashboard</a></li>
             <li><a href="voter_turnout.html">Voter Turnout</a></li>
-            <li><a href="results.html" id="active-link">Results</a></li>
+            <li><a href="results" id="active-link">Results</a></li>
             <li><a href="voter_information.html">Voter Information</a></li>
             <li><a>Settings</a></li>
           </ul>
@@ -84,7 +85,7 @@
       <div class="footer-side">OCTOBER 23, 2024 - 04:17 AM</div>
     </footer>
 
-    <script src="js/results_ssc.js"></script>
-    <script src="js/results_lsc.js"></script>
+    <script src="admin/js/results_ssc.js"></script>
+    <script src="admin/js/results_lsc.js"></script>
   </body>
 </html>
