--- a/public/voter/css/vote.css
+++ b/public/voter/css/vote.css
@@ -3,6 +3,10 @@
   --color-yellow: #f4ab2a;
   --color-red: #a60212;
   --color-blue: #004aad;
+
+  --color-party: #525252;
+  --color-selected: #550c0a;
+  --color-selected-bg: #f8cac9;
 }
 
 /* .ballot-choices div {
@@ -10,24 +14,37 @@
 } */
 
 .ballot {
-  background-color: var(--color-lighter-yellow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: var(--color-lighter-yellow); */
+  background-color: white;
   min-height: 80vh;
   border-radius: 2em;
   color: black;
-  width: 100%;
+  width: 80vw;
+}
+
+.ballot > * {
+  width: inherit;
 }
 
 .ballot-header {
   color: white;
   padding: 1% 0;
+  margin: 2% 0;
 }
 
 .ballot-council {
   background-color: var(--color-red);
+  font-size: 1.6rem;
+  text-transform: uppercase;
 }
 
 .ballot-position {
-  background-color: var(--color-blue);
+  background-color: var(--color-yellow);
+  color: black;
+  font-size: 1.5rem;
 }
 
 /* .ballot-choices > div:first-child {
@@ -49,32 +66,539 @@
   display: none;
 }
 
-.ballot-choices label {
+/* .ballot-choices label {
   display: block;
   border: 2px solid #707070;
   border-radius: 0.4em;
-}
+} */
 
 .ballot-choices input[type="radio"]:checked + label {
-  background: #aac5e9;
+  background: var(--color-selected-bg);
 }
 .ballot-choices input[type="checkbox"]:checked + label {
-  background: #aac5e9;
+  background: var(--color-selected-bg);
 }
 
 .ballot-choices input[type="checkbox"] {
   /* display: none; */
 }
 
-#ballot-senator {
+/* #ballot-senator {
   display: flex;
   flex-direction: column;
 }
+
 .ballot-senator label {
   width: 48%;
   background-color: white;
-}
+} */
 
 .label-abstain {
   background-color: white;
+}
+
+.ballot-choices {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+/* label */
+.label-container {
+  /* border: 1px solid pink; */
+  flex-basis: 30%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.ballot-tile > * {
+  padding: 2% 1%;
+}
+
+.ballot-tile > hr {
+  padding: 0;
+}
+
+.ballot-tile .party {
+  color: var(--color-party);
+  font-size: 1rem;
+  font-style: italic;
+}
+
+.ballot-tile .name {
+  font-size: 2rem;
+}
+
+.label-container hr {
+  width: 80%;
+  /* border: red; */
+}
+
+.ballot-tile {
+  display: block;
+  border: 1px solid #707070;
+}
+
+.ballot-tile img {
+  width: 60%;
+  height: auto;
+}
+
+.ballot-choices {
+  gap: 1rem;
+}
+
+/* #ballot-senator {
+  gap: 1rem;
+} */
+
+#ballot-senator .label-container {
+  flex-basis: 25%;
+}
+
+.label-senator .ballot-tile .party {
+  font-size: 1rem;
+}
+
+.label-senator .ballot-tile img {
+  width: 40%;
+}
+
+.label-senator .ballot-tile .name {
+  font-size: 1.5rem;
+}
+
+.label-senator .ballot-tile .info {
+  font-size: 0.8rem;
+}
+
+.ballot-lsc .label-container {
+  flex-basis: 27.5%;
+}
+
+.ballot-lsc .label-senator .ballot-tile .party {
+  font-size: 1rem;
+}
+
+.ballot-lsc .label-senator .ballot-tile img {
+  width: 50%;
+}
+
+.ballot-lsc .label-senator .ballot-tile .name {
+  font-size: 1.75rem;
+}
+
+.ballot-lsc .label-senator .ballot-tile .info {
+  font-size: 0.9rem;
+}
+
+.ballot-choice:checked + .ballot-tile {
+  border-color: var(--color-selected);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  color: var(--color-selected);
+}
+
+.ballot-choice:checked + .ballot-tile .party {
+  color: var(--color-selected);
+}
+
+.ballot-choice:checked + .ballot-tile:before {
+  transform: scale(1);
+  opacity: 1;
+  background-color: var(--color-selected);
+  border-color: var(--color-selected);
+}
+
+.ballot-choice:focus + .ballot-tile {
+  border-color: var(--color-selected);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 0 0 4px #b5c9fc;
+}
+
+.ballot-choice:focus + .ballot-tile:before {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.ballot-tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  /* width: 80px; */
+  /* min-height: 80px; */
+  border-radius: 0.5rem;
+  border: 2px solid #b5bfd9;
+  background-color: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  transition: 0.15s ease;
+  cursor: pointer;
+  position: relative;
+}
+
+.ballot-tile:before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  border: 2px solid #b5bfd9;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 0.5rem;
+  left: 0.5rem;
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.25s ease;
+}
+
+.ballot-tile:hover {
+  border-color: var(--color-selected);
+}
+
+.ballot-tile:hover:before {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.ballot-choice {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.checkbox-wrapper-10 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+/* Animation for Abstain */
+
+.checkbox-wrapper-10 .tgl {
+  display: none;
+}
+
+.checkbox-wrapper-10 .tgl,
+.checkbox-wrapper-10 .tgl:after,
+.checkbox-wrapper-10 .tgl:before,
+.checkbox-wrapper-10 .tgl *,
+.checkbox-wrapper-10 .tgl *:after,
+.checkbox-wrapper-10 .tgl *:before,
+.checkbox-wrapper-10 .tgl + .tgl-btn {
+  box-sizing: border-box;
+}
+
+.checkbox-wrapper-10 .tgl::-moz-selection,
+.checkbox-wrapper-10 .tgl:after::-moz-selection,
+.checkbox-wrapper-10 .tgl:before::-moz-selection,
+.checkbox-wrapper-10 .tgl *::-moz-selection,
+.checkbox-wrapper-10 .tgl *:after::-moz-selection,
+.checkbox-wrapper-10 .tgl *:before::-moz-selection,
+.checkbox-wrapper-10 .tgl + .tgl-btn::-moz-selection,
+.checkbox-wrapper-10 .tgl::selection,
+.checkbox-wrapper-10 .tgl:after::selection,
+.checkbox-wrapper-10 .tgl:before::selection,
+.checkbox-wrapper-10 .tgl *::selection,
+.checkbox-wrapper-10 .tgl *:after::selection,
+.checkbox-wrapper-10 .tgl *:before::selection,
+.checkbox-wrapper-10 .tgl + .tgl-btn::selection {
+  background: none;
+}
+
+.checkbox-wrapper-10 .tgl + .tgl-btn {
+  /* padding: auto; */
+  outline: 0;
+  display: block;
+  width: 10em;
+  height: 2.5em;
+  position: relative;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.checkbox-wrapper-10 .tgl + .tgl-btn:after,
+.checkbox-wrapper-10 .tgl + .tgl-btn:before {
+  position: relative;
+  display: block;
+  content: "";
+  width: 50%;
+  height: 100%;
+}
+
+.checkbox-wrapper-10 .tgl + .tgl-btn:after {
+  left: 0;
+}
+
+.checkbox-wrapper-10 .tgl + .tgl-btn:before {
+  display: none;
+}
+
+.checkbox-wrapper-10 .tgl:checked + .tgl-btn:after {
+  left: 50%;
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn {
+  padding: 2px;
+  transition: all 1s ease;
+  font-family: sans-serif;
+  perspective: 100px;
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:after,
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:before {
+  display: inline-block;
+  transition: all 1s ease;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  line-height: 2em;
+  font-weight: bold;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 4px;
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:after {
+  content: attr(data-tg-on);
+  background: #02c66f;
+
+  transform: rotateY(-180deg);
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:before {
+  background: #ff3a19;
+  content: attr(data-tg-off);
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:active:before {
+  transform: rotateY(-20deg);
+}
+
+.checkbox-wrapper-10 .tgl-flip:checked + .tgl-btn:before {
+  transform: rotateY(180deg);
+}
+
+.checkbox-wrapper-10 .tgl-flip:checked + .tgl-btn:after {
+  transform: rotateY(0);
+  left: 0;
+  background: #02c66f;
+}
+
+.checkbox-wrapper-10 .tgl-flip:checked + .tgl-btn:active:after {
+  transform: rotateY(20deg);
+}
+
+/* Animation for Review Your Votes */
+.continue-application {
+  --color: #fff;
+  --background: #404660;
+  --background-hover: #3a4059;
+  --background-left: #2b3044;
+  --folder: #f3e9cb;
+  --folder-inner: #beb393;
+  --paper: #ffffff;
+  --paper-lines: #bbc1e1;
+  --paper-behind: #e1e6f9;
+  --pencil-cap: #fff;
+  --pencil-top: #275efe;
+  --pencil-middle: #fff;
+  --pencil-bottom: #5c86ff;
+  --shadow: rgba(13, 15, 25, 0.2);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 19px;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  padding: 17px 29px 17px 69px;
+  transition: background 0.3s;
+  color: var(--color);
+  background: var(--bg, var(--background));
+}
+
+.continue-application > div {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 53px;
+  position: absolute;
+  overflow: hidden;
+  border-radius: 5px 0 0 5px;
+  background: var(--background-left);
+}
+
+.continue-application > div .folder {
+  width: 23px;
+  height: 27px;
+  position: absolute;
+  left: 15px;
+  top: 13px;
+}
+
+.continue-application > div .folder .top {
+  left: 0;
+  top: 0;
+  z-index: 2;
+  position: absolute;
+  transform: translateX(var(--fx, 0));
+  transition: transform 0.4s ease var(--fd, 0.3s);
+}
+
+.continue-application > div .folder .top svg {
+  width: 24px;
+  height: 27px;
+  display: block;
+  fill: var(--folder);
+  transform-origin: 0 50%;
+  transition: transform 0.3s ease var(--fds, 0.45s);
+  transform: perspective(120px) rotateY(var(--fr, 0deg));
+}
+
+.continue-application > div .folder:before,
+.continue-application > div .folder:after,
+.continue-application > div .folder .paper {
+  content: "";
+  position: absolute;
+  left: var(--l, 0);
+  top: var(--t, 0);
+  width: var(--w, 100%);
+  height: var(--h, 100%);
+  border-radius: 1px;
+  background: var(--b, var(--folder-inner));
+}
+
+.continue-application > div .folder:before {
+  box-shadow: 0 1.5px 3px var(--shadow), 0 2.5px 5px var(--shadow), 0 3.5px 7px var(--shadow);
+  transform: translateX(var(--fx, 0));
+  transition: transform 0.4s ease var(--fd, 0.3s);
+}
+
+.continue-application > div .folder:after,
+.continue-application > div .folder .paper {
+  --l: 1px;
+  --t: 1px;
+  --w: 21px;
+  --h: 25px;
+  --b: var(--paper-behind);
+}
+
+.continue-application > div .folder:after {
+  transform: translate(var(--pbx, 0), var(--pby, 0));
+  transition: transform 0.4s ease var(--pbd, 0s);
+}
+
+.continue-application > div .folder .paper {
+  z-index: 1;
+  --b: var(--paper);
+}
+
+.continue-application > div .folder .paper:before,
+.continue-application > div .folder .paper:after {
+  content: "";
+  width: var(--wp, 14px);
+  height: 2px;
+  border-radius: 1px;
+  transform: scaleY(0.5);
+  left: 3px;
+  top: var(--tp, 3px);
+  position: absolute;
+  background: var(--paper-lines);
+  box-shadow: 0 12px 0 0 var(--paper-lines), 0 24px 0 0 var(--paper-lines);
+}
+
+.continue-application > div .folder .paper:after {
+  --tp: 6px;
+  --wp: 10px;
+}
+
+.continue-application > div .pencil {
+  height: 2px;
+  width: 3px;
+  border-radius: 1px 1px 0 0;
+  top: 8px;
+  left: 105%;
+  position: absolute;
+  z-index: 3;
+  transform-origin: 50% 19px;
+  background: var(--pencil-cap);
+  transform: translateX(var(--pex, 0)) rotate(35deg);
+  transition: transform 0.4s ease var(--pbd, 0s);
+}
+
+.continue-application > div .pencil:before,
+.continue-application > div .pencil:after {
+  content: "";
+  position: absolute;
+  display: block;
+  background: var(--b, linear-gradient(var(--pencil-top) 55%, var(--pencil-middle) 55.1%, var(--pencil-middle) 60%, var(--pencil-bottom) 60.1%));
+  width: var(--w, 5px);
+  height: var(--h, 20px);
+  border-radius: var(--br, 2px 2px 0 0);
+  top: var(--t, 2px);
+  left: var(--l, -1px);
+}
+
+.continue-application > div .pencil:before {
+  -webkit-clip-path: polygon(0 5%, 5px 5%, 5px 17px, 50% 20px, 0 17px);
+  clip-path: polygon(0 5%, 5px 5%, 5px 17px, 50% 20px, 0 17px);
+}
+
+.continue-application > div .pencil:after {
+  --b: none;
+  --w: 3px;
+  --h: 6px;
+  --br: 0 2px 1px 0;
+  --t: 3px;
+  --l: 3px;
+  border-top: 1px solid var(--pencil-top);
+  border-right: 1px solid var(--pencil-top);
+}
+
+.continue-application:before,
+.continue-application:after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 2px;
+  border-radius: 1px;
+  background: var(--color);
+  transform-origin: 9px 1px;
+  transform: translateX(var(--cx, 0)) scale(0.5) rotate(var(--r, -45deg));
+  top: 26px;
+  right: 16px;
+  transition: transform 0.3s;
+}
+
+.continue-application:after {
+  --r: 45deg;
+}
+
+.continue-application:hover {
+  --cx: 2px;
+  --bg: var(--background-hover);
+  --fx: -40px;
+  --fr: -60deg;
+  --fd: 0.15s;
+  --fds: 0s;
+  --pbx: 3px;
+  --pby: -3px;
+  --pbd: 0.15s;
+  --pex: -24px;
 }
