--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -27,6 +27,7 @@
     </header>
 
     <div class="content">
+      <br />
       <div class="content-header">
         <div class="content-header-bulsu">
           <img src="img/logo_bulsu.png" />
@@ -40,7 +41,8 @@
       </div>
       <form action="/review" method="POST">
         <div class="content-main">
-          <p>You can submit your votes by pressing the SUBMIT BALLOT button below.</p>
+          <p><i>You can submit your votes by pressing the SUBMIT BALLOT button below.</i></p>
+          <br />
 
           <div class="ballot ballot-ssc">
             <br />
@@ -53,17 +55,29 @@
             <div id="ballot-president" class="ballot-choices">
               <!-- Loop through all vice president candidates -->
               <% candidates .filter(candidate=> candidate.position === 'president') .forEach((president, index) => { %>
-              <input id="president-<%= index + 1 %>" type="radio" name="president" value="<%= JSON.stringify({ id: president._id, name: president.name }) %>" />
+              <div class="label-container label-president">
+                <input class="ballot-choice" id="president-<%= index + 1 %>" type="radio" name="president" value="<%= JSON.stringify({ id: president._id, name: president.name }) %>" />
 
-              <label for="president-<%= index + 1 %>">
-                <h4><%= president.party %></h4>
-                <img src="<%= president.image %>" alt="<%= president.name %>" />
-                <h4><%= president.name %></h4>
-                <p><%= president.moreInfo %></p>
-              </label>
+                <label class="ballot-tile" for="president-<%= index + 1 %>">
+                  <h4 class="party"><%= president.party %></h4>
+                  <img class="img-president" src="<%= president.image %>" alt="<%= president.name %>" />
+                  <h4 class="name"><%= president.name %></h4>
+                  <hr />
+                  <p class="info"><%= president.moreInfo %></p>
+                  <!-- <p>sdaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p> -->
+                </label>
+              </div>
               <% }); %>
-              <input type="checkbox" id="abstain-president" name="president" value="Abstain" />
-              <label for="abstain-president">Abstain</label>
+            </div>
+
+            <!-- <input type="checkbox" id="abstain-president" name="president" value="Abstain" />
+            <label for="abstain-president">Abstain</label> -->
+
+            <br />
+
+            <div class="checkbox-wrapper-10">
+              <input type="checkbox" id="abstain-president" name="president" value="Abstain" class="tgl tgl-flip" />
+              <label for="abstain-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
 
             <br />
@@ -74,103 +88,170 @@
             <div id="ballot-vice-president" class="ballot-choices">
               <!-- Loop through all vice president candidates -->
               <% candidates .filter(candidate=> candidate.position === 'vice president') .forEach((vicePresident, index) => { %>
-              <input id="vice-president-<%= index + 1 %>" type="radio" name="vicePresident" value="<%= JSON.stringify({ id: vicePresident._id, name: vicePresident.name }) %>" />
+              <div class="label-container label-vice-president">
+                <input class="ballot-choice" id="vice-president-<%= index + 1 %>" type="radio" name="vicePresident" value="<%= JSON.stringify({ id: vicePresident._id, name: vicePresident.name }) %>" />
 
-              <label for="vice-president-<%= index + 1 %>">
-                <h4><%= vicePresident.party %></h4>
-                <img src="<%= vicePresident.image %>" alt="<%= vicePresident.name %>" />
-                <h4><%= vicePresident.name %></h4>
-                <p><%= vicePresident.moreInfo %></p>
-              </label>
+                <label class="ballot-tile" for="vice-president-<%= index + 1 %>">
+                  <h4 class="party"><%= vicePresident.party %></h4>
+                  <img class="img-vice-president" src="<%= vicePresident.image %>" alt="<%= vicePresident.name %>" />
+                  <h4 class="name"><%= vicePresident.name %></h4>
+                  <hr />
+                  <p class="info"><%= vicePresident.moreInfo %></p>
+                </label>
+              </div>
               <% }); %>
-              <input type="checkbox" id="abstain-vice-president" name="vicePresident" value="Abstain" />
-              <label for="abstain-vice-president">Abstain</label>
             </div>
+
+            <br />
+            <div class="checkbox-wrapper-10">
+              <input type="checkbox" id="abstain-vice-president" name="vicePresident" value="Abstain" class="tgl tgl-flip" />
+              <label for="abstain-vice-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
+            </div>
+
+            <!-- <input type="checkbox" id="abstain-vice-president" name="vicePresident" value="Abstain" />
+            <label for="abstain-vice-president">Abstain</label> -->
 
             <br />
 
             <h3 class="ballot-header ballot-position">Senators</h3>
             <div id="ballot-senator" class="ballot-choices">
               <% const sortedSenators=candidates .filter(candidate=> candidate.position === 'senator') .sort((a, b) => a.party.localeCompare(b.party)); sortedSenators.forEach((senator, index) => { %>
-              <input id="senator-<%= index + 1 %>" type="checkbox" name="senator" value="<%= JSON.stringify({ id: senator._id, name: senator.name }) %>" />
+              <div class="label-container label-senator">
+                <input class="ballot-choice" id="senator-<%= index + 1 %>" type="checkbox" name="senator" value="<%= JSON.stringify({ id: senator._id, name: senator.name }) %>" />
 
-              <label for="senator-<%= index + 1 %>">
-                <h4><%= senator.party %></h4>
-                <img src="<%= senator.image %>" alt="<%= senator.name %>" />
-                <h4><%= senator.name %></h4>
-                <p><%= senator.moreInfo %></p>
-              </label>
+                <label class="ballot-tile" for="senator-<%= index + 1 %>">
+                  <h4 class="party"><%= senator.party %></h4>
+                  <img class="img-senator" src="<%= senator.image %>" alt="<%= senator.name %>" />
+                  <h4 class="name"><%= senator.name %></h4>
+                  <hr />
+                  <p class="info"><%= senator.moreInfo %></p>
+                </label>
+              </div>
               <% }); %>
             </div>
 
             <br />
           </div>
+          <br />
+
           <div class="ballot ballot-lsc">
+            <br />
             <h3 class="ballot-header ballot-council">Local Student Council - <%= voterCollege %></h3>
             <br />
             <br />
             <h3 class="ballot-header ballot-position">Governor</h3>
             <br />
             <div id="ballot-governor" class="ballot-choices">
-              <% let governorCandidates=candidates_lsc.filter(candidate=> candidate.college === voterCollege && candidate.position === 'governor' ); %> <% governorCandidates.forEach((candidate,
-              index)=> { %>
-              <input id="governor-<%= index + 1 %>" type="radio" name="governor" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
+              <% let governorCandidates=candidates_lsc.filter(candidate=> candidate.college === voterCollege && candidate.position === 'governor' ); %> <% governorCandidates.forEach((candidate, index)=> { %>
+              <div class="label-container label-governor">
+                <input class="ballot-choice" id="governor-<%= index + 1 %>" type="radio" name="governor" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
 
-              <label for="governor-<%= index + 1 %>">
-                <h4><%= candidate.party %></h4>
-                <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                <h4><%= candidate.name %></h4>
-                <p><%= candidate.moreInfo %></p>
-              </label>
+                <label class="ballot-tile" for="governor-<%= index + 1 %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-governor" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
+                  <hr />
+                  <p class="info"><%= candidate.moreInfo %></p>
+                </label>
+              </div>
               <% }) %>
-              <input type="checkbox" id="abstain-governor" name="governor" value="Abstain" />
-              <label for="abstain-governor">Abstain</label>
             </div>
+
+            <br />
+            <div class="checkbox-wrapper-10">
+              <input type="checkbox" id="abstain-governor" name="governor" value="Abstain" class="tgl tgl-flip" />
+              <label for="abstain-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
+            </div>
+
+            <!-- <input type="checkbox" id="abstain-governor" name="governor" value="Abstain" />
+              <label for="abstain-governor">Abstain</label> -->
 
             <br />
             <h3 class="ballot-header ballot-position">Vice Governor</h3>
             <br />
             <div id="ballot-vice-governor" class="ballot-choices">
-              <% let viceGovernorCandidates=candidates_lsc.filter(candidate=> candidate.college === voterCollege && candidate.position === 'vice governor' ); %> <%
-              viceGovernorCandidates.forEach((candidate, index)=> { %>
-              <input id="vice-governor-<%= index + 1 %>" type="radio" name="viceGovernor" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
+              <% let viceGovernorCandidates=candidates_lsc.filter(candidate=> candidate.college === voterCollege && candidate.position === 'vice governor' ); %> <% viceGovernorCandidates.forEach((candidate, index)=> { %>
+              <div class="label-container label-vice-governor">
+                <input class="ballot-choice" id="vice-governor-<%= index + 1 %>" type="radio" name="viceGovernor" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
 
-              <label for="vice-governor-<%= index + 1 %>">
-                <h4><%= candidate.party %></h4>
-                <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                <h4><%= candidate.name %></h4>
-                <p><%= candidate.moreInfo %></p>
-              </label>
+                <label class="ballot-tile" for="vice-governor-<%= index + 1 %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-vice-governor" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
+                  <hr />
+                  <p class="info"><%= candidate.moreInfo %></p>
+                </label>
+              </div>
               <% }) %>
-              <input type="checkbox" id="abstain-vice-governor" name="viceGovernor" value="Abstain" />
-              <label for="abstain-vice-governor">Abstain</label>
+            </div>
+
+            <!-- <input type="checkbox" id="abstain-vice-governor" name="viceGovernor" value="Abstain" />
+            <label for="abstain-vice-governor">Abstain</label> -->
+
+            <br />
+            <div class="checkbox-wrapper-10">
+              <input type="checkbox" id="abstain-vice-governor" name="governor" value="Abstain" class="tgl tgl-flip" />
+              <label for="abstain-vice-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
 
             <br />
             <h3 class="ballot-header ballot-position">Board Member</h3>
             <br />
             <div id="ballot-board-member" class="ballot-choices">
-              <% let boardMemberCandidates=lsc_board_members.filter(candidate=> candidate.college === voterCollege && candidate.program === voterProgram ); %> <%
-              boardMemberCandidates.forEach((candidate, index)=> { %>
-              <input id="board-member-<%= index + 1 %>" type="radio" name="boardMember" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
+              <% let boardMemberCandidates=lsc_board_members.filter(candidate=> candidate.college === voterCollege && candidate.program === voterProgram ); %> <% boardMemberCandidates.forEach((candidate, index)=> { %>
+              <div class="label-container label-board-member">
+                <input class="ballot-choice" id="board-member-<%= index + 1 %>" type="radio" name="boardMember" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
 
-              <label for="board-member-<%= index + 1 %>">
-                <h4><%= candidate.party %></h4>
-                <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                <h4><%= candidate.name %></h4>
-                <p><%= candidate.moreInfo %></p>
-              </label>
+                <label class="ballot-tile" for="board-member-<%= index + 1 %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-board-member" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
+                  <hr />
+                  <p class="info"><%= candidate.moreInfo %></p>
+                </label>
+              </div>
               <% }) %>
-              <input type="checkbox" id="abstain-board-member" name="boardMember" value="Abstain" />
-              <label for="abstain-board-member">Abstain</label>
             </div>
 
             <br />
+            <div class="checkbox-wrapper-10">
+              <input type="checkbox" id="abstain-board-member" name="boardMember" value="Abstain" class="tgl tgl-flip" />
+              <label for="abstain-board-member" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
+            </div>
+
+            <!-- <input type="checkbox" id="abstain-board-member" name="boardMember" value="Abstain" />
+            <label for="abstain-board-member">Abstain</label> -->
+
+            <br />
+
+            <div>
+              <br />
+              <hr />
+              <p><i>You still need to review and confirm your votes in the next page.</i></p>
+              <hr />
+              <br />
+              <!-- <input type="submit" value="Review Selections" /> -->
+              <button class="continue-application">
+                <div>
+                  <div class="pencil"></div>
+                  <div class="folder">
+                    <div class="top">
+                      <svg viewBox="0 0 24 27">
+                        <path
+                          d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"
+                        ></path>
+                      </svg>
+                    </div>
+                    <div class="paper"></div>
+                  </div>
+                </div>
+                Review Your Votes
+              </button>
+              <br />
+            </div>
+            <br />
           </div>
         </div>
-
-        <p>You still need to review and confirm your votes in the next page.</p>
-        <input type="submit" value="Review Selections" />
       </form>
     </div>
 
@@ -183,6 +264,26 @@
       </div>
     </div>
 
-    <script></script>
+    <script>
+      function toggleOverlay(checkboxId, targetClass) {
+        document.querySelector(`#${checkboxId}`).addEventListener("change", function () {
+          document.querySelectorAll(`.${targetClass}`).forEach((element) => {
+            if (this.checked) {
+              element.style.position = "relative";
+              element.style.filter = "brightness(50%)"; // Darken the image when abstaining
+            } else {
+              element.style.filter = "brightness(100%)"; // Reset brightness when voting
+            }
+          });
+        });
+      }
+
+      // Example usage:
+      toggleOverlay("abstain-president", "label-president");
+      toggleOverlay("abstain-vice-president", "label-vice-president");
+      toggleOverlay("abstain-governor", "label-governor");
+      toggleOverlay("abstain-vice-governor", "label-vice-governor");
+      toggleOverlay("abstain-board-member", "label-board-member");
+    </script>
   </body>
 </html>
