--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -53,8 +53,9 @@
             <h3 class="ballot-header ballot-position">President</h3>
             <br />
             <div id="ballot-president" class="ballot-choices">
-              <!-- Loop through all vice president candidates -->
-              <% candidates .filter(candidate=> candidate.position === 'president') .forEach((president, index) => { %>
+              <!-- Loop through all president candidates, sorted by party name -->
+              <% candidates.filter(candidate => candidate.position === 'president').sort((a, b) => a.party.localeCompare(b.party)).forEach((president, index) => { %>
+
               <div class="label-container label-president">
                 <input class="ballot-choice" id="president-<%= index + 1 %>" type="radio" name="president" value="<%= JSON.stringify({ id: president._id, name: president.name }) %>" />
 
@@ -64,9 +65,9 @@
                   <h4 class="name"><%= president.name %></h4>
                   <hr />
                   <p class="info"><%= president.moreInfo %></p>
-                  <!-- <p>sdaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p> -->
                 </label>
               </div>
+
               <% }); %>
             </div>
 
@@ -87,7 +88,7 @@
             <br />
             <div id="ballot-vice-president" class="ballot-choices">
               <!-- Loop through all vice president candidates -->
-              <% candidates .filter(candidate=> candidate.position === 'vice president') .forEach((vicePresident, index) => { %>
+              <% candidates.filter(candidate => candidate.position === 'vice president').sort((a, b) => a.party.localeCompare(b.party)).forEach((vicePresident, index) => { %>
               <div class="label-container label-vice-president">
                 <input class="ballot-choice" id="vice-president-<%= index + 1 %>" type="radio" name="vicePresident" value="<%= JSON.stringify({ id: vicePresident._id, name: vicePresident.name }) %>" />
 
@@ -142,7 +143,8 @@
             <h3 class="ballot-header ballot-position">Governor</h3>
             <br />
             <div id="ballot-governor" class="ballot-choices">
-              <% let governorCandidates=candidates_lsc.filter(candidate=> candidate.college === voterCollege && candidate.position === 'governor' ); %> <% governorCandidates.forEach((candidate, index)=> { %>
+              <% let governorCandidates = candidates_lsc.filter(candidate => candidate.college === voterCollege && candidate.position === 'governor').sort((a, b) => a.party.localeCompare(b.party)); governorCandidates.forEach((candidate, index) => { %>
+
               <div class="label-container label-governor">
                 <input class="ballot-choice" id="governor-<%= index + 1 %>" type="radio" name="governor" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
 
@@ -170,7 +172,8 @@
             <h3 class="ballot-header ballot-position">Vice Governor</h3>
             <br />
             <div id="ballot-vice-governor" class="ballot-choices">
-              <% let viceGovernorCandidates=candidates_lsc.filter(candidate=> candidate.college === voterCollege && candidate.position === 'vice governor' ); %> <% viceGovernorCandidates.forEach((candidate, index)=> { %>
+              <% let viceGovernorCandidates = candidates_lsc.filter(candidate => candidate.college === voterCollege && candidate.position === 'vice governor').sort((a, b) => a.party.localeCompare(b.party)); viceGovernorCandidates.forEach((candidate, index) => { %>
+
               <div class="label-container label-vice-governor">
                 <input class="ballot-choice" id="vice-governor-<%= index + 1 %>" type="radio" name="viceGovernor" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
 
@@ -198,7 +201,8 @@
             <h3 class="ballot-header ballot-position">Board Member</h3>
             <br />
             <div id="ballot-board-member" class="ballot-choices">
-              <% let boardMemberCandidates=lsc_board_members.filter(candidate=> candidate.college === voterCollege && candidate.program === voterProgram ); %> <% boardMemberCandidates.forEach((candidate, index)=> { %>
+              <% let boardMemberCandidates = lsc_board_members.filter(candidate => candidate.college === voterCollege && candidate.program === voterProgram).sort((a, b) => a.party.localeCompare(b.party)); boardMemberCandidates.forEach((candidate, index) => { %>
+
               <div class="label-container label-board-member">
                 <input class="ballot-choice" id="board-member-<%= index + 1 %>" type="radio" name="boardMember" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name }) %>" />
 
